--- a/assets/css/stylesTwo.css
+++ b/assets/css/stylesTwo.css
@@ -108,12 +108,12 @@ iframe {
 */
 /* ======= Header ======= */
 .header {
-  padding: 30px 0;
-  background: #f5f5f5;
-  border-top: 10px solid #778492;
+  padding: 120px 0;
+  background: #ffffff;
+ 
 }
 .header .btn {
-  margin-top: 60px;
+  margin-top: 30px;
   font-weight: bold;
 }
 .header .profile-image {
@@ -505,6 +505,19 @@ iframe {
 .footer .fa-heart {
   color: #fb866a;
 }
+/* ======= maintainanceHeader ======= */
+.maintainanceHeader{
+  background: red;
+  color: #fff;
+  padding: 6px 0px 1px 0px;;
+}
+.maintainanceTitle{
+  color: white;
+  font-size: 15px;
+}
+
+
+
 /* Extra small devices (phones, less than 768px) */
 @media (max-width: 767px) {
   .header {
@@ -526,6 +539,10 @@ iframe {
     margin-bottom: 15px;
   }
 }
+
+
+
+
 /* Small devices (tablets, 768px and up) */
 /* Medium devices (desktops, 992px and up) */
 /* Large devices (large desktops, 1200px and up) */
